--- a/FacilityLocation.ipynb
+++ b/FacilityLocation.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 20  # number of facility locations\n",
-    "m = 80  # number of clients"
+    "n = 2  # number of facility locations\n",
+    "m = 5  # number of clients"
    ]
   },
   {
@@ -119,9 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add constraints\n",
@@ -381,6 +379,147 @@
     "## Capacitated Facility location\n",
     "\n",
     "* Each client $i$ has a demand $a_{i}$, and each facility has a capacity $q_{j}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "n = 10  # number of facility locations\n",
+    "m = 30  # number of clients\n",
+    "\n",
+    "# Draw costs\n",
+    "Random.seed!(0)\n",
+    "f = rand(1000:10000, n);\n",
+    "c = rand(0:1000, m, n);\n",
+    "\n",
+    "# Clients' demands\n",
+    "a = rand(1:10, m);\n",
+    "\n",
+    "# Capacities\n",
+    "q = rand(30:40, n);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate an empty model\n",
+    "model_cap = Model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create variables\n",
+    "y = @variable(model_cap, y[1:n], Bin);\n",
+    "x = @variable(model_cap, x[1:m, 1:n], Bin);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# set objective\n",
+    "C = sum([c[i, j]*x[i, j] for i in 1:m for j in 1:n])  # demand serving cost\n",
+    "F = sum([f[j]*y[j] for j in 1:n])  # fixed cost\n",
+    "\n",
+    "@objective(model_cap, Min, C + F);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add constraints\n",
+    "\n",
+    "# Each client is serve exactly once\n",
+    "ctr_ = @constraint(\n",
+    "    model_cap,                       # add constraints to model\n",
+    "    [i in 1:m],                      # there are `m` constraints, indexed by `i`\n",
+    "    sum(x[i, j] for j in 1:n) == 1   # the actual constraint\n",
+    ")\n",
+    "\n",
+    "# Capacity constraints\n",
+    "ctr_capacity = @constraint(\n",
+    "    model_cap,\n",
+    "    [j in 1:n],\n",
+    "    sum(a[i] * x[i, j] for i in 1:m) <= q[j]*y[j]\n",
+    ");\n",
+    "\n",
+    "# Tighten LP relaxation\n",
+    "ctr_opening = @constraint(\n",
+    "    model_cap,\n",
+    "    [i in 1:m, j in 1:n],\n",
+    "    x[i, j] <= y[j]\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Set optimizer\n",
+    "set_optimizer(\n",
+    "    model_cap,\n",
+    "    with_optimizer(\n",
+    "        GLPK.Optimizer,\n",
+    "        msg_lev=3,    # verbosity level\n",
+    "        tm_lim=10000  # time limit, in ms\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@time optimize!(model_cap)\n",
+    "println(\"Optimal value: \", objective_value(model_cap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Best solution found so far\n",
+    "objective_value(model_cap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try with Cbc\n",
+    "set_optimizer(model_cap, with_optimizer(Cbc.Optimizer))\n",
+    "optimize!(model_cap)"
    ]
   }
  ],
