--- a/FacilityLocation.ipynb
+++ b/FacilityLocation.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "include(\"setup.jl\")"
@@ -27,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n = 2  # number of facility locations\n",
@@ -85,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instantiate an empty model\n",
@@ -95,48 +101,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create variables\n",
-    "y = @variable(model, y[1:n], Bin);\n",
-    "x = @variable(model, x[1:m, 1:n], Bin);"
+    "x = \n",
+    "y = "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set objective\n",
-    "C = sum([c[i, j]*x[i, j] for i in 1:m for j in 1:n])  # demand serving cost\n",
-    "F = sum([f[j]*y[j] for j in 1:n])  # fixed cost\n",
+    "C =   # demand serving cost\n",
+    "F =   # fixed cost\n",
     "\n",
-    "@objective(model, Min, C + F);"
+    "# TODO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add constraints\n",
     "\n",
     "# Each client is serve exactly once\n",
-    "@constraint(\n",
-    "    model,                           # add constraints to model\n",
-    "    [i in 1:m],                      # there are `m` constraints, indexed by `i`\n",
-    "    sum(x[i, j] for j in 1:n) == 1   # the actual constraint\n",
-    ")\n",
+    "# TODO\n",
     "\n",
-    "# Fixed cost of opening facilities\n",
-    "@constraint(\n",
-    "    model,\n",
-    "    [j in 1:n],\n",
-    "    sum(x[i, j] for i in 1:m) <= m*y[j]\n",
-    ");"
+    "# Facility must be open to serve a client\n",
+    "# TODO"
    ]
   },
   {
@@ -148,13 +152,15 @@
    "outputs": [],
    "source": [
     "# Set optimizer\n",
-    "set_optimizer(model, with_optimizer(GLPK.Optimizer))"
+    "# TODO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimize!(model)\n",
@@ -164,21 +170,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# relax all binary variables\n",
-    "for var in x\n",
-    "    is_binary(var) && unset_binary(var)\n",
-    "    set_lower_bound(var, 0.0)\n",
-    "    set_upper_bound(var, 1.0)\n",
-    "end\n",
-    "\n",
-    "for var in y\n",
-    "    is_binary(var) && unset_binary(var)\n",
-    "    set_lower_bound(var, 0.0)\n",
-    "    set_upper_bound(var, 1.0)\n",
-    "end\n",
+    "# TODO\n",
     "\n",
     "# Solve the LP relaxation\n",
     "optimize!(model)\n",
@@ -189,17 +187,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set all variables to be binary\n",
-    "for var in x\n",
-    "    set_binary(var)\n",
-    "end\n",
-    "\n",
-    "for var in y\n",
-    "    set_binary(var)\n",
-    "end\n",
+    "# TODO\n",
     "\n",
     "optimize!(model)\n",
     "mip_val = objective_value(model)\n",
@@ -209,10 +203,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "(mip_val - lp_val) / mip_val"
+    "(mip_val - lp_val) / mip_val  # integrality gap"
    ]
   },
   {
@@ -237,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model_ext = Model()"
@@ -251,9 +249,8 @@
    },
    "outputs": [],
    "source": [
-    "# Create y variables\n",
-    "@variable(model_ext, y[1:m], Bin);\n",
-    "@variable(model_ext, x[1:m, 1:n], Bin);"
+    "# Create variables\n",
+    "# TODO"
    ]
   },
   {
@@ -264,11 +261,8 @@
    },
    "outputs": [],
    "source": [
-    "# set objective\n",
-    "F = sum([f[j]*y[j] for j in 1:n])\n",
-    "C = sum([c[i, j]*x[i, j] for i in 1:m for j in 1:n])\n",
-    "                \n",
-    "@objective(model_ext, Min, F + C);"
+    "# Set objective\n",
+    "# TODO"
    ]
   },
   {
@@ -282,18 +276,10 @@
     "# Add constraints\n",
     "\n",
     "# Each client is serve exactly once\n",
-    "@constraint(\n",
-    "    model_ext,\n",
-    "    [i in 1:m],\n",
-    "    sum(x[i, j] for j in 1:n) == 1\n",
-    ")\n",
+    "# TODO\n",
     "\n",
-    "# Fixed cost of opening facilities\n",
-    "@constraint(\n",
-    "    model_ext,\n",
-    "    [i in 1:m, j in 1:n],\n",
-    "    x[i, j] <= y[j]\n",
-    ");"
+    "# Facility must be open to serve a client\n",
+    "# TODO"
    ]
   },
   {
@@ -305,13 +291,15 @@
    "outputs": [],
    "source": [
     "# Set optimizer\n",
-    "set_optimizer(model_ext, with_optimizer(GLPK.Optimizer))"
+    "# TODO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimize!(model_ext)\n",
@@ -321,21 +309,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# relax all binary variables\n",
-    "for var in x\n",
-    "    is_binary(var) && unset_binary(var)\n",
-    "    set_lower_bound(var, 0.0)\n",
-    "    set_upper_bound(var, 1.0)\n",
-    "end\n",
-    "\n",
-    "for var in y\n",
-    "    is_binary(var) && unset_binary(var)\n",
-    "    set_lower_bound(var, 0.0)\n",
-    "    set_upper_bound(var, 1.0)\n",
-    "end\n",
+    "# TODO\n",
     "\n",
     "# Solve the LP relaxation\n",
     "optimize!(model_ext)\n",
@@ -346,17 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set all variables to be binary\n",
-    "for var in x\n",
-    "    set_binary(var)\n",
-    "end\n",
-    "\n",
-    "for var in y\n",
-    "    set_binary(var)\n",
-    "end\n",
+    "# TODO\n",
     "\n",
     "optimize!(model_ext)\n",
     "mip_val = objective_value(model_ext)\n",
@@ -366,10 +342,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "(mip_val - lp_val) / mip_val"
+    "(mip_val - lp_val) / mip_val  # integrality gap"
    ]
   },
   {
@@ -379,6 +357,23 @@
     "## Capacitated Facility location\n",
     "\n",
     "* Each client $i$ has a demand $a_{i}$, and each facility has a capacity $q_{j}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "    \\begin{array}{cl}\n",
+    "        \\min_{x, y} \\ \\ \\ &\n",
+    "            \\sum_{i, j} c_{i, j} x_{i, j} + \n",
+    "            \\sum_{j} f_{j} y_{j}\\\\\n",
+    "        s.t. &\n",
+    "            \\sum_{j} x_{i, j} = 1, \\ \\ \\ \\forall i \\in M\\\\\n",
+    "        &   \\sum_{i} a_{i} x_{i, j} \\leq q_{j} y_{j}, \\ \\ \\ \\forall j \\in N\\\\\n",
+    "        &   x_{i, j}, y_{j} \\in \\{0, 1\\}, \\ \\ \\ \\forall i \\in M, j \\in N\n",
+    "    \\end{array}\n",
+    "$$"
    ]
   },
   {
@@ -407,7 +402,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Instantiate an empty model\n",
@@ -423,8 +420,7 @@
    "outputs": [],
    "source": [
     "# Create variables\n",
-    "y = @variable(model_cap, y[1:n], Bin);\n",
-    "x = @variable(model_cap, x[1:m, 1:n], Bin);"
+    "# TODO"
    ]
   },
   {
@@ -436,40 +432,27 @@
    "outputs": [],
    "source": [
     "# set objective\n",
-    "C = sum([c[i, j]*x[i, j] for i in 1:m for j in 1:n])  # demand serving cost\n",
-    "F = sum([f[j]*y[j] for j in 1:n])  # fixed cost\n",
-    "\n",
-    "@objective(model_cap, Min, C + F);"
+    "# TODO"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Add constraints\n",
     "\n",
     "# Each client is serve exactly once\n",
-    "ctr_ = @constraint(\n",
-    "    model_cap,                       # add constraints to model\n",
-    "    [i in 1:m],                      # there are `m` constraints, indexed by `i`\n",
-    "    sum(x[i, j] for j in 1:n) == 1   # the actual constraint\n",
-    ")\n",
+    "# TODO\n",
     "\n",
     "# Capacity constraints\n",
-    "ctr_capacity = @constraint(\n",
-    "    model_cap,\n",
-    "    [j in 1:n],\n",
-    "    sum(a[i] * x[i, j] for i in 1:m) <= q[j]*y[j]\n",
-    ");\n",
+    "# TODO\n",
     "\n",
     "# Tighten LP relaxation\n",
-    "ctr_opening = @constraint(\n",
-    "    model_cap,\n",
-    "    [i in 1:m, j in 1:n],\n",
-    "    x[i, j] <= y[j]\n",
-    ");"
+    "# TODO"
    ]
   },
   {
@@ -494,7 +477,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "@time optimize!(model_cap)\n",
@@ -504,7 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Best solution found so far\n",
@@ -514,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# try with Cbc\n",
@@ -525,15 +514,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.1.0",
+   "display_name": "Julia 1.0.1",
    "language": "julia",
-   "name": "julia-1.1"
+   "name": "julia-1.0"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.1.0"
+   "version": "1.0.1"
   }
  },
  "nbformat": 4,
