Use DelimitedFiles instead of ExcelReader and JLD

--- a/TSP.ipynb
+++ b/TSP.ipynb
@@ -36,12 +36,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"tsp/DataReader.jl\")"
+    "d = readdlm(\"./tsp/distances_quebec.txt\")"
    ]
   },
   {
@@ -50,16 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = load(string(workspace,\"/tsp/distances_quebec.jld\"),\"distances\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = load(string(workspace,\"/tsp/cities_quebec.jld\"),\"cities\")"
+    "c = readdlm(\"./tsp/cities_quebec.txt\")"
    ]
   },
   {
@@ -185,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d2 = load(string(workspace,\"/tsp/distances_usa.jld\"),\"distances2\")"
+    "d2 = readdlm(\"./tsp/distances_usa.txt\")"
    ]
   },
   {
@@ -194,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2 = load(string(workspace,\"/tsp/cities_usa.jld\"),\"cities2\")"
+    "c2 = readdlm(\"./tsp/cities_usa.txt\")"
    ]
   },
   {
@@ -357,15 +346,15 @@
  "metadata": {
   "celltoolbar": "Aucun(e)",
   "kernelspec": {
-   "display_name": "Julia 1.0.1",
+   "display_name": "Julia 1.1.0",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.1"
+   "version": "1.1.0"
   }
  },
  "nbformat": 4,
