Notebook Facility location final

--- a/FacilityLocation.ipynb
+++ b/FacilityLocation.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "include(\"setup.jl\")"
@@ -16,6 +14,8 @@
    "metadata": {},
    "source": [
     "# Facility location problem\n",
+    "\n",
+    "**Originally Contributed by**: Mathieu Tanneau and Alexis Montoison\n",
     "\n",
     "Benchmark instances: http://resources.mpi-inf.mpg.de/departments/d1/projects/benchmarks/UflLib/\n",
     "\n",
@@ -29,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n = 2  # number of facility locations\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Draw costs\n",
@@ -64,158 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compact MILP formulation\n",
-    "\n",
-    "$$\n",
-    "    \\begin{array}{cl}\n",
-    "        \\min_{x, y} \\ \\ \\ &\n",
-    "            \\sum_{i, j} c_{i, j} x_{i, j} + \n",
-    "            \\sum_{j} f_{j} y_{j}\\\\\n",
-    "        s.t. &\n",
-    "            \\sum_{j} x_{i, j} = 1, \\ \\ \\ \\forall i \\in M\\\\\n",
-    "        &   \\sum_{i} x_{i, j} \\leq m y_{j}, \\ \\ \\ \\forall j \\in N\\\\\n",
-    "        &   x_{i, j}, y_{j} \\in \\{0, 1\\}, \\ \\ \\ \\forall i \\in M, j \\in N\n",
-    "    \\end{array}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Simple formulation using JuMP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Instantiate an empty model\n",
-    "model = Model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Create variables\n",
-    "x = \n",
-    "y = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# set objective\n",
-    "C =   # demand serving cost\n",
-    "F =   # fixed cost\n",
-    "\n",
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Add constraints\n",
-    "\n",
-    "# Each client is serve exactly once\n",
-    "# TODO\n",
-    "\n",
-    "# Facility must be open to serve a client\n",
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Set optimizer\n",
-    "# TODO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "optimize!(model)\n",
-    "println(\"Optimal value: \", objective_value(model))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# relax all binary variables\n",
-    "# TODO\n",
-    "\n",
-    "# Solve the LP relaxation\n",
-    "optimize!(model)\n",
-    "lp_val = objective_value(model)\n",
-    "println(\"Optimal value of relaxed model: \", lp_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# set all variables to be binary\n",
-    "# TODO\n",
-    "\n",
-    "optimize!(model)\n",
-    "mip_val = objective_value(model)\n",
-    "println(\"Optimal value of integer model: \", mip_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "(mip_val - lp_val) / mip_val  # integrality gap"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extended MILP formulation\n",
+    "### MILP formulation\n",
     "\n",
     "$$\n",
     "    \\begin{array}{cl}\n",
@@ -233,118 +78,154 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model_ext = Model()"
+    "model = Model();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Create variables\n",
-    "# TODO"
+    "# Create y variables\n",
+    "@variable(model, y[1:m], Bin);\n",
+    "@variable(model, x[1:m, 1:n], Bin);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Set objective\n",
-    "# TODO"
+    "# set objective\n",
+    "F = sum([f[j]*y[j] for j in 1:n])\n",
+    "C = sum([c[i, j]*x[i, j] for i in 1:m for j in 1:n])\n",
+    "                \n",
+    "@objective(model, Min, F + C);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add constraints\n",
     "\n",
     "# Each client is serve exactly once\n",
-    "# TODO\n",
+    "@constraint(\n",
+    "    model,\n",
+    "    [i in 1:m],\n",
+    "    sum(x[i, j] for j in 1:n) == 1\n",
+    ")\n",
     "\n",
-    "# Facility must be open to serve a client\n",
-    "# TODO"
+    "# Fixed cost of opening facilities\n",
+    "@constraint(\n",
+    "    model,\n",
+    "    [i in 1:m, j in 1:n],\n",
+    "    x[i, j] <= y[j]\n",
+    ");"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set optimizer\n",
-    "# TODO"
+    "set_optimizer(model, with_optimizer(GLPK.Optimizer))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "optimize!(model_ext)\n",
-    "println(\"Optimal value: \", objective_value(model_ext))"
+    "optimize!(model)\n",
+    "println(\"Optimal value: \", objective_value(model))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get y and x solutions\n",
+    "ysol = value.(y);\n",
+    "println(\"Optimal solution y: \", value.(y))\n",
+    "xsol = value.(x);\n",
+    "println(\"Optimal solution x: \", value.(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# relax all binary variables\n",
-    "# TODO\n",
+    "for var in x\n",
+    "    is_binary(var) && unset_binary(var)\n",
+    "    set_lower_bound(var, 0.0)\n",
+    "    set_upper_bound(var, 1.0)\n",
+    "end\n",
+    "\n",
+    "for var in y\n",
+    "    is_binary(var) && unset_binary(var)\n",
+    "    set_lower_bound(var, 0.0)\n",
+    "    set_upper_bound(var, 1.0)\n",
+    "end\n",
     "\n",
     "# Solve the LP relaxation\n",
-    "optimize!(model_ext)\n",
-    "lp_val = objective_value(model_ext)\n",
+    "optimize!(model)\n",
+    "lp_val = objective_value(model)\n",
     "println(\"Optimal value of relaxed model: \", lp_val)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get y and x solutions\n",
+    "lp_ysol = value.(y);\n",
+    "println(\"Optimal solution y: \", value.(y))\n",
+    "lp_xsol = value.(x);\n",
+    "println(\"Optimal solution x: \", value.(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set all variables to be binary\n",
-    "# TODO\n",
+    "for var in x\n",
+    "    set_binary(var)\n",
+    "end\n",
     "\n",
-    "optimize!(model_ext)\n",
-    "mip_val = objective_value(model_ext)\n",
+    "for var in y\n",
+    "    set_binary(var)\n",
+    "end\n",
+    "\n",
+    "optimize!(model)\n",
+    "mip_val = objective_value(model)\n",
     "println(\"Optimal value of integer model: \", mip_val)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "(mip_val - lp_val) / mip_val  # integrality gap"
@@ -379,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n = 10  # number of facility locations\n",
@@ -402,65 +281,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate an empty model\n",
-    "model_cap = Model()"
+    "model_cap = Model();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create variables\n",
-    "# TODO"
+    "y = @variable(model_cap, y[1:n], Bin);\n",
+    "x = @variable(model_cap, x[1:m, 1:n], Bin);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# set objective\n",
-    "# TODO"
+    "C = sum([c[i, j]*x[i, j] for i in 1:m for j in 1:n])  # demand serving cost\n",
+    "F = sum([f[j]*y[j] for j in 1:n])  # fixed cost\n",
+    "\n",
+    "@objective(model_cap, Min, C + F);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Add constraints\n",
     "\n",
     "# Each client is serve exactly once\n",
-    "# TODO\n",
+    "ctr_ = @constraint(\n",
+    "    model_cap,                       # add constraints to model\n",
+    "    [i in 1:m],                      # there are `m` constraints, indexed by `i`\n",
+    "    sum(x[i, j] for j in 1:n) == 1   # the actual constraint\n",
+    ")\n",
     "\n",
     "# Capacity constraints\n",
-    "# TODO\n",
+    "ctr_capacity = @constraint(\n",
+    "    model_cap,\n",
+    "    [j in 1:n],\n",
+    "    sum(a[i] * x[i, j] for i in 1:m) <= q[j]*y[j]\n",
+    ");\n",
     "\n",
     "# Tighten LP relaxation\n",
-    "# TODO"
+    "ctr_opening = @constraint(\n",
+    "    model_cap,\n",
+    "    [i in 1:m, j in 1:n],\n",
+    "    x[i, j] <= y[j]\n",
+    ");"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set optimizer\n",
@@ -477,33 +362,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "@time optimize!(model_cap)\n",
+    "# Best solution found so far\n",
     "println(\"Optimal value: \", objective_value(model_cap))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Best solution found so far\n",
-    "objective_value(model_cap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# try with Cbc\n",
@@ -513,16 +382,20 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
-   "display_name": "Julia 1.0.1",
+   "display_name": "Julia 1.1.1",
    "language": "julia",
-   "name": "julia-1.0"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.0.1"
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
